--- a/stylesheets/tipping_card.css
+++ b/stylesheets/tipping_card.css
@@ -1,8 +1,12 @@
+.match-tipping {
+    width: 100%;
+    margin: 20px 0;
+}
+
 .percentage-bar {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+    height: 30px;
+    border: 1px solid black;
 }
 
 .percentage {
@@ -14,19 +18,30 @@
     position: relative;
 }
 
+.section {
+    transition: width 0.3s;
+}
+
+#blueSection {
+    background-color: blue;
+}
+
+#drawSection {
+    background-color: white;
+}
+
+#greySection {
+    background-color: grey;
+}
+
 .buttons {
     display: flex;
     justify-content: space-between;
-    width: 420px;
-    margin: 0 auto;
 }
 
 .btn {
-    width: 100px;
-    height: 40px;
-    background: #f5f5f5;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    font-size: 20px;
-    cursor: pointer;
-}
+    .btn {
+        padding: 10px;
+        margin: 5px;
+        cursor: pointer;
+    }
